projects cards alignments fix🛠

--- a/src/index.css
+++ b/src/index.css
@@ -33,15 +33,25 @@
     top: 40%;
   }
 }
+/* width */
+::-webkit-scrollbar {
+  width: 5px; 
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #1AE400; 
+  border-radius: 5px;
+}
 * {
   box-sizing: border-box;
 }
 body {
   margin: 0;
-  font-family: "Circular Spotify Tx T Light", ROBOTO;
+  font-family: "Circular Spotify Tx T Light", ROBOTO, Haas;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* scrollbar-width: 41rem; */
+  /* overflow: hidden; Hide scrollbars */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -168,7 +178,7 @@ code {
 .column {
   float: left;
   width: 50%;
-  padding: 15px 100px;
+  padding: 15px 62px;
 }
 .card h3 {
   margin-top: 4px;
@@ -193,7 +203,7 @@ code {
 .about-section {
   margin-left: 8rem;
   margin-bottom: 13rem;
-  width: 65rem;
+  /* width: 65rem; */
   font-weight: 600;
 }
 .about {
@@ -295,7 +305,7 @@ code {
 }
 .name {
   background-image: url(https://media.giphy.com/media/tj5v01sQumzCg/giphy.gif);
-  /* background-size: cover; */
+  background-size: cover;
   color: transparent;
   -moz-background-clip: text;
   -webkit-background-clip: text;
@@ -303,11 +313,38 @@ code {
   /* font-size: 120px; */
   margin: 10px 0;
 }
-
-@media screen and (max-width: 800px) {
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 0rem;
+  margin: 0rem;
+}
+.footer a {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-weight: 700;
+}
+/* .footer a:hover {
+  color: #1AE400;
+  transition: 0.6s;
+} */
+.right {
+  margin-right: 45%;
+}
+@media screen and (max-width: 600px) {
   .column {
     width: 100%;
     display: block;
     margin-bottom: 10px;
+  }
+  .bottom-bar {
+    display: flex;
+    justify-content: center;
+    margin-top: 10rem;
+    width: auto;
+    margin-bottom: 8rem;
+  }
+  body {
+    width: 600px;
   }
 }
